isd/oes/templates/ingress/spin-ingress.yaml
---
# Source: oes/templates/ingress/spin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx
  name: spin-ingress
spec:
  rules:
  - host: spindeck-fourtwo-test.isd-dev.opsmx.net
    http:
      paths:
      - backend:
          service:
            name: spin-deck
            port:
              number: 9000
        path: /
        pathType: ImplementationSpecific
